<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简译</string>
    <string name="s_appinfos">百度翻译Demo</string>
    <string name="action_settings">Settings</string>
    
    <string name="s_toquery">查询</string>
    <string name="s_translate">翻译</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="title_homes">首页</string>

    <string name="menu_home">首页</string>
    <string name="menu_dic">词典</string>
    <string name="menu_trans">翻译</string>

    <string name="s_sign_in">注册</string>
    <string name="s_login_in">登录</string>
    <string name="title_activity_login">登录</string>

    <string name="s_hint_username">用户名</string>
    <string name="s_hint_password">密  码</string>
    <string name="s_hint_re_password">确认密码</string>
    <string name="s_hint_email">邮箱</string>


    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_in">注册</string>
    <string name="title_activity_change_photo">修改头像</string>
    <string name="title_activity_welcome">WelcomeActivity</string>


</resources>
