<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg">

    <include layout="@layout/toolbar" />

    <TextView
        android:id="@+id/login_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/s_hint_username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:layout_below="@id/user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/s_hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/s_hint_re_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="15dp"
            android:layout_below="@id/repass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/s_hint_email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:onClick="toLogin"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:background="@drawable/button_bg"
            android:text="@string/s_sign_in" />
    </RelativeLayout>

</RelativeLayout>
