<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg">
    <include layout="@layout/toolbar" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_above="@+id/login_info"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:id="@+id/login_info"
        android:layout_width="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:hint="@string/s_hint_username"
            android:paddingLeft="15dp"
            android:drawableLeft="@drawable/login_user"
            android:textColor="@color/material_blue_grey_800"
            android:ems="10"
            android:id="@+id/login_username"
            android:layout_weight="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableLeft="@drawable/login_pass"
            android:hint="@string/s_hint_password"
            android:textColor="@color/material_blue_grey_800"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_weight="1" />

        <RelativeLayout
            android:id="@+id/login_btninfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_info">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="120dp"
                android:focusable="true"
                android:layout_alignParentLeft="true"
                android:onClick="onLogin"
                android:textColor="@color/white"
                android:background="@drawable/button_bg"
                android:clickable="true"
                android:layout_height="40dp"
                android:text="@string/s_login_in" />

            <Button
                android:layout_width="120dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:layout_height="40dp"
                android:onClick="onRegister"
                android:clickable="true"
                android:background="@drawable/button_bg"
                android:text="@string/s_sign_in" />
        </RelativeLayout>

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:paddingLeft="30dp"-->
        <!--android:paddingRight="30dp"-->
        <!--android:layout_above="@+id/other_loginbtn"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/white"-->
            <!--android:layout_weight="5" />-->

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:text="or"-->
            <!--android:textColor="@color/white" />-->

        <!--<View-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/white"-->
            <!--android:layout_weight="5" />-->
    <!--</LinearLayout>-->

    <!--<RelativeLayout-->
        <!--android:id="@+id/other_loginbtn"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_height="wrap_content">-->

        <!--<ImageView-->
            <!--android:id="@+id/qq_login"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:clickable="true"-->
            <!--android:src="@drawable/qq"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:background="@drawable/btn_thirdlogin_bg"/>-->

        <!--<ImageView-->
            <!--android:clickable="true"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_toRightOf="@id/qq_login"-->
            <!--android:background="@drawable/btn_thirdlogin_bg"-->
            <!--android:src="@drawable/sina_weibo"/>-->
    <!--</RelativeLayout>-->
</RelativeLayout>

